# dynomite

./: CMakeLists.txt  Doxyfile  README.md
docs/: developer-docs.md
src/: dyn_client.c  dyn_conf.c  dyn_conf.h  dyn_core.c  dyn_server.c
