cmake_minimum_required(VERSION 3.6)
project(dynomite)

include_directories(
        /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.12.sdk/usr/include/)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    contrib/murmur3/murmur3.c
    contrib/murmur3/murmur3.h
    contrib/yaml-0.1.4/include/yaml.h
    contrib/yaml-0.1.4/src/api.c
    contrib/yaml-0.1.4/src/dumper.c
    contrib/yaml-0.1.4/src/emitter.c
    contrib/yaml-0.1.4/src/loader.c
    contrib/yaml-0.1.4/src/parser.c
    contrib/yaml-0.1.4/src/reader.c
    contrib/yaml-0.1.4/src/scanner.c
    contrib/yaml-0.1.4/src/writer.c
    contrib/yaml-0.1.4/src/yaml_private.h
    contrib/yaml-0.1.4/tests/example-deconstructor-alt.c
    contrib/yaml-0.1.4/tests/example-deconstructor.c
    contrib/yaml-0.1.4/tests/example-reformatter-alt.c
    contrib/yaml-0.1.4/tests/example-reformatter.c
    contrib/yaml-0.1.4/tests/run-dumper.c
    contrib/yaml-0.1.4/tests/run-emitter.c
    contrib/yaml-0.1.4/tests/run-loader.c
    contrib/yaml-0.1.4/tests/run-parser.c
    contrib/yaml-0.1.4/tests/run-scanner.c
    contrib/yaml-0.1.4/tests/test-reader.c
    contrib/yaml-0.1.4/tests/test-version.c
    contrib/yaml-0.1.4/config.h
    contrib/fmemopen.c
    contrib/fmemopen.h
    src/entropy/dyn_entropy.h
    src/entropy/dyn_entropy_rcv.c
    src/entropy/dyn_entropy_snd.c
    src/entropy/dyn_entropy_util.c
    src/event/dyn_epoll.c
    src/event/dyn_event.h
    src/event/dyn_evport.c
    src/event/dyn_kqueue.c
    src/hashkit/dyn_crc16.c
    src/hashkit/dyn_crc32.c
    src/hashkit/dyn_fnv.c
    src/hashkit/dyn_hashkit.h
    src/hashkit/dyn_hsieh.c
    src/hashkit/dyn_jenkins.c
    src/hashkit/dyn_ketama.c
    src/hashkit/dyn_md5.c
    src/hashkit/dyn_modula.c
    src/hashkit/dyn_murmur.c
    src/hashkit/dyn_murmur3.c
    src/hashkit/dyn_one_at_a_time.c
    src/hashkit/dyn_random.c
    src/hashkit/dyn_vnode.c
    src/openssl/aes.h
    src/openssl/asn1.h
    src/openssl/asn1_mac.h
    src/openssl/asn1t.h
    src/openssl/bio.h
    src/openssl/blowfish.h
    src/openssl/bn.h
    src/openssl/buffer.h
    src/openssl/camellia.h
    src/openssl/cast.h
    src/openssl/cmac.h
    src/openssl/cms.h
    src/openssl/comp.h
    src/openssl/conf.h
    src/openssl/conf_api.h
    src/openssl/crypto.h
    src/openssl/des.h
    src/openssl/des_old.h
    src/openssl/dh.h
    src/openssl/dsa.h
    src/openssl/dso.h
    src/openssl/dtls1.h
    src/openssl/e_os2.h
    src/openssl/ebcdic.h
    src/openssl/ec.h
    src/openssl/ecdh.h
    src/openssl/ecdsa.h
    src/openssl/engine.h
    src/openssl/err.h
    src/openssl/evp.h
    src/openssl/hmac.h
    src/openssl/idea.h
    src/openssl/krb5_asn.h
    src/openssl/kssl.h
    src/openssl/lhash.h
    src/openssl/md4.h
    src/openssl/md5.h
    src/openssl/mdc2.h
    src/openssl/modes.h
    src/openssl/obj_mac.h
    src/openssl/objects.h
    src/openssl/ocsp.h
    src/openssl/opensslconf.h
    src/openssl/opensslv.h
    src/openssl/ossl_typ.h
    src/openssl/pem.h
    src/openssl/pem2.h
    src/openssl/pkcs12.h
    src/openssl/pkcs7.h
    src/openssl/pqueue.h
    src/openssl/rand.h
    src/openssl/rc2.h
    src/openssl/rc4.h
    src/openssl/ripemd.h
    src/openssl/rsa.h
    src/openssl/safestack.h
    src/openssl/seed.h
    src/openssl/sha.h
    src/openssl/srp.h
    src/openssl/srtp.h
    src/openssl/ssl.h
    src/openssl/ssl2.h
    src/openssl/ssl23.h
    src/openssl/ssl3.h
    src/openssl/stack.h
    src/openssl/symhacks.h
    src/openssl/tls1.h
    src/openssl/ts.h
    src/openssl/txt_db.h
    src/openssl/ui.h
    src/openssl/ui_compat.h
    src/openssl/whrlpool.h
    src/openssl/x509.h
    src/openssl/x509_vfy.h
    src/openssl/x509v3.h
    src/proto/dyn_memcache.c
    src/proto/dyn_proto.h
    src/proto/dyn_redis.c
    src/seedsprovider/dyn_dns.c
    src/seedsprovider/dyn_florida.c
    src/seedsprovider/dyn_seeds_provider.h
    src/tools/dyn_hash_tool.c
    src/dyn_array.c
    src/dyn_array.h
    src/dyn_asciilogo.h
    src/dyn_cbuf.h
    src/dyn_client.c
    src/dyn_client.h
    src/dyn_conf.c
    src/dyn_conf.h
    src/dyn_connection.c
    src/dyn_connection.h
    src/dyn_core.c
    src/dyn_core.h
    src/dyn_crypto.c
    src/dyn_crypto.h
    src/dyn_dict.c
    src/dyn_dict.h
    src/dyn_dnode_client.c
    src/dyn_dnode_client.h
    src/dyn_dnode_msg.c
    src/dyn_dnode_msg.h
    src/dyn_dnode_peer.c
    src/dyn_dnode_peer.h
    src/dyn_dnode_proxy.c
    src/dyn_dnode_proxy.h
    src/dyn_dnode_request.c
    src/dyn_gossip.c
    src/dyn_gossip.h
    src/dyn_histogram.c
    src/dyn_histogram.h
    src/dyn_log.c
    src/dyn_log.h
    src/dyn_mbuf.c
    src/dyn_mbuf.h
    src/dyn_message.c
    src/dyn_message.h
    src/dyn_node_snitch.c
    src/dyn_node_snitch.h
    src/dyn_proxy.c
    src/dyn_proxy.h
    src/dyn_queue.h
    src/dyn_rbtree.c
    src/dyn_rbtree.h
    src/dyn_request.c
    src/dyn_response.c
    src/dyn_response_mgr.c
    src/dyn_response_mgr.h
    src/dyn_ring_queue.c
    src/dyn_ring_queue.h
    src/dyn_server.c
    src/dyn_server.h
    src/dyn_setting.c
    src/dyn_setting.h
    src/dyn_signal.c
    src/dyn_signal.h
    src/dyn_stats.c
    src/dyn_stats.h
    src/dyn_string.c
    src/dyn_string.h
    src/dyn_test.c
    src/dyn_token.c
    src/dyn_token.h
    src/dyn_types.h
    src/dyn_util.c
    src/dyn_util.h
    src/dynomite.c
    config.h)

add_executable(dynomite ${SOURCE_FILES})